--- a/client/src/styles/Ppe.css
+++ b/client/src/styles/Ppe.css
@@ -1,220 +1,218 @@
-
 /* Can remove next 2 rule this when hellobar goes away why */
 
 .ReactModal__Overlay.ReactModal__Overlay--after-open {
-    z-index: 99999999;
+  z-index: 99999999;
 }
 
-
-.hellobar-div{
-    background-color: #36b0c9;
-    text-align: center;
-    padding: 16px 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 9999999;
-    display: none;
+.hellobar-div {
+  background-color: #36b0c9;
+  text-align: center;
+  padding: 16px 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999999;
 }
 
-.hellobar-div-mobile{
-    background-color: #36b0c9;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 10px;
-    display: none;
+.hellobar-div-mobile {
+  background-color: #36b0c9;
+  text-align: center;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-top: -68px;
 }
 
-.hellobar-p{
-    font-size: 20px;
-    color: #fff;
-    display: inline;
-    margin-right: 10px;
+.hellobar-p {
+  font-size: 20px;
+  color: #fff;
+  display: inline;
+  margin-right: 10px;
 }
 
-.hellobar-link{
-    font-size: 20px;
-    color: #fff;
-    display: inline;
-    text-decoration: underline;
+.hellobar-link {
+  font-size: 20px;
+  color: #fff;
+  display: inline;
+  text-decoration: underline;
 }
 
-.hellobar-cta{
-    color: #36b0c9;
-    font-size: 18px;
-    padding: 10px 20px;
-    background-color: #fff;
-    border-radius: 7px;
-    font-family: Proxima-bold;
-    border: 1px solid #fff;
-    text-decoration: none;
+.hellobar-cta {
+  color: #36b0c9;
+  font-size: 18px;
+  padding: 10px 20px;
+  background-color: #fff;
+  border-radius: 7px;
+  font-family: Proxima-bold;
+  border: 1px solid #fff;
+  text-decoration: none;
 }
 
-.hellobar-cta:hover, .hellobar-cta:active{
-    background-color: #ef7521;
-    color: #fff;
-    text-decoration: none;;
+.hellobar-cta:hover,
+.hellobar-cta:active {
+  background-color: #ef7521;
+  color: #fff;
+  text-decoration: none;
 }
 
 .hero-ppe {
-    background-image: url('../images/ppe/ppe-hero.jpg');
-    width: 100%;
-    height: 636px;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/ppe/ppe-hero.jpg");
+  width: 100%;
+  height: 636px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.basic{
-    color: #696969;
-    font-size: 18px;
+.basic {
+  color: #696969;
+  font-size: 18px;
 }
 
-.ppe-cta-top{
-    font-size: 70px;
-    color: white;
-    font-family: proxima-bold;
-    line-height: 1;
+.ppe-cta-top {
+  font-size: 70px;
+  color: white;
+  font-family: proxima-bold;
+  line-height: 1;
 }
 
-.ppe-cta-bottom{
-    font-size: 25px;
-    color: white;
+.ppe-cta-bottom {
+  font-size: 25px;
+  color: white;
 }
 
-.ppe-hero-box{
-    padding-top: 15%;
-    padding-right: 25%;
+.ppe-hero-box {
+  padding-top: 15%;
+  padding-right: 25%;
 }
 
 .ppe-all-items.container {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
-.item-card{
-    text-align: center;
-    height: 500px;
-    margin-bottom: 30px;
+.item-card {
+  text-align: center;
+  height: 500px;
+  margin-bottom: 30px;
 }
 
-.item-image{
-    max-width: 100%;
+.item-image {
+  max-width: 100%;
 }
 
-.item-name{
-    color: #3babc5;
-    font-size: 20px;
-    font-weight: 800;
-    height: 45px;
+.item-name {
+  color: #3babc5;
+  font-size: 20px;
+  font-weight: 800;
+  height: 45px;
 }
 
-.item-description{
-    color: #919191;
-    font-size: 16px;
-    margin-bottom: 0;
-    height: 15px;
+.item-description {
+  color: #919191;
+  font-size: 16px;
+  margin-bottom: 0;
+  height: 15px;
 }
 
-.item-btn{
-    color: #fff;
-    font-size: 18px;
-    padding: 11px 25px;
-    background-color: #ef7521;
-    border-radius: 7px;
-    font-family: Proxima-bold;
-    border: none;
-    margin-top: 15px;
+.item-btn {
+  color: #fff;
+  font-size: 18px;
+  padding: 11px 25px;
+  background-color: #ef7521;
+  border-radius: 7px;
+  font-family: Proxima-bold;
+  border: none;
+  margin-top: 15px;
 }
 
-.item-btn:hover{
-    background-color: #ce5400;
+.item-btn:hover {
+  background-color: #ce5400;
 }
 
 .contact-small-ppe {
-    text-align: center;
-    width: 70%;
+  text-align: center;
+  width: 70%;
 }
 
 .ppe-footer-title {
-    font-size: 50px;
-    color: #fff;
-    font-family: Proxima-bold;
-    margin-bottom: 50px;
+  font-size: 50px;
+  color: #fff;
+  font-family: Proxima-bold;
+  margin-bottom: 50px;
 }
 
 /*Protective Info*/
 
-.ppe-link{
-    font-weight: 700;
-    color: #696969;
-    text-decoration: underline;
+.ppe-link {
+  font-weight: 700;
+  color: #696969;
+  text-decoration: underline;
 }
 
 .ppe-spacing {
-    margin: 30px 0;
+  margin: 30px 0;
 }
 
 .ppe-basic {
-    color: #696969;
-    font-size: 16px;
-    margin-bottom: 20px;
+  color: #696969;
+  font-size: 16px;
+  margin-bottom: 20px;
 }
 
-.ppe-title-blue{
-    color: #36b0c9;
-    font-family: Proxima-Bold;
-    font-size: 40px;
+.ppe-title-blue {
+  color: #36b0c9;
+  font-family: Proxima-Bold;
+  font-size: 40px;
 }
 
-.ppe-title-green{
-    color: #b8be14;
-    font-family: Proxima-Bold;
-    font-size: 40px;
+.ppe-title-green {
+  color: #b8be14;
+  font-family: Proxima-Bold;
+  font-size: 40px;
 }
 
-.ppe-title-orange{
-    color: #ee7623;
-    font-family: Proxima-Bold;
-    font-size: 40px;
+.ppe-title-orange {
+  color: #ee7623;
+  font-family: Proxima-Bold;
+  font-size: 40px;
 }
 
 ul.ppe-ul {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 ul.ppe-ul li {
-    color: #696969;
-    font-size: 16px;
+  color: #696969;
+  font-size: 16px;
 }
 
-@media(max-width: 991px){
-    .hellobar-div{
-        display: none;
-    }
-    .hellobar-p{
-        display: block;
-    }
-    .hellobar-cta{
-        padding: 6px 20px;
-    }
-    .ppe-footer-title{
-        font-size: 40px;
-    }
-    #root{
-        padding-top: 0;
-    }
+@media (max-width: 991px) {
+  .hellobar-div {
+    display: none;
+  }
+  .hellobar-p {
+    display: block;
+  }
+  .hellobar-cta {
+    padding: 6px 20px;
+  }
+  .ppe-footer-title {
+    font-size: 40px;
+  }
+  #root {
+    padding-top: 0;
+  }
 }
 
-@media(max-width:767px){
-    .item-card{
-        height: auto;
-    }
-    .ppe-cta-top{
-        font-size: 40px;
-    }
-    .ppe-hero-box{
-        margin-top: 13%;
-    }
-    .contact-small-ppe{
-        width: 90%;
-    }
+@media (max-width: 767px) {
+  .item-card {
+    height: auto;
+  }
+  .ppe-cta-top {
+    font-size: 40px;
+  }
+  .ppe-hero-box {
+    margin-top: 13%;
+  }
+  .contact-small-ppe {
+    width: 90%;
+  }
 }
